# CAA_torrent

./: .gitignore  README.md  dataset_torrent_pipeline.py  metadata_format.yaml  pyproject.toml  torrent_config.yaml
temp/: jrdr-2026-002-1.0.torrent
temp/d03aab44-55be-4fc3-a70d-fa7d90e53929/: metadata.yaml
temp/ec9012fe-e034-4742-9360-261f606542ed/: metadata.yaml
