[project]
name = "caa-torrent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libtorrent>=2.0.11",
    "libtorrent-windows-dll>=0.0.3",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dataset_torrent_pipeline"]
